crosshair/examples/PEP316/bugs_detected/shopping_cart.out
shopping_cart.py:22: error: false when calling compute_total(ShoppingCart(items = [('', 1)]), {'': 0.0}) (which returns 0.0)
